--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "trick_or_trip_react",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.2",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -44,5 +51,6 @@
   "devDependencies": {
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
