--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://Tal-Segal.github.io/TrickOrTrip-React",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "emailjs": "^4.0.1",
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
     "mongoose": "^6.5.2",
