--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "gh-pages": "^4.0.0",
+    "mongo-image-converter": "^1.0.2",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-table": "^7.8.0",
     "reactstrap": "^9.1.3",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
